# vita

./: .env.example  .gitignore  AUDIO_PIPELINE_IMPLEMENTATION.md  CONVERSATION_CORE.md  DEPLOYMENT_GUIDE.md  Dockerfile  GEMINI_IMPLEMENTATION_SUMMARY.md  GEMINI_SERVICE.md  I18N_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPORT_SHADOWING_FIX.md  NOTIFICATIONS_IMPLEMENTATION.md  ORM_MODELS_SUMMARY.md  README.md  RELIABILITY_IMPLEMENTATION.md  TICKET_CHECKLIST.md  TICKET_IMPLEMENTATION_SUMMARY.md  __init__.py  alembic.ini  docker-compose.yml  example_usage.py  examples_gemini.py  examples_i18n.py  examples_notifications.py  examples_platform_adapters.py  exceptions.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py  setup.sh  test_import_shadowing.py  test_init_db.py
alembic/: README.md  env.py
config/: config.py
core/: README.md  __init__.py  conversation.py  errors.py  health.py  i18n.py  logging.py  main.py  middleware.py
data/: __init__.py  database.py  models.py  repositories.py
locales/: kz.json  ru.json
services/: repositories.py  validators.py
tests/: conftest.py  test_admin_handlers.py  test_audio_converter.py  test_audio_pipeline.py  test_audio_transcriber.py  test_client_handlers.py  test_conversation.py  test_error_handling.py  test_gemini_analyzer.py  test_gemini_client.py  test_gemini_integration.py  test_i18n.py  test_notifications_adapters.py  test_notifications_notifier.py  test_notifications_templates.py  test_orm.py  test_platform_instagram.py  test_platform_router.py  test_platform_telegram.py  test_platform_whatsapp.py  (+1 more)
(+31 files in other folders)
